openturns/1.16/_sources/auto_probabilistic_modeling/distributions/plot_bayes_distribution.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_probabilistic_modeling_distributions_plot_bayes_distribution.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_probabilistic_modeling_distributions_plot_bayes_distribution.py:


Create a Bayes distribution
===========================

In this example we are going to build the distribution of the random vector

.. math::
   ( \underline{X}|\underline{\Theta}, \underline{Y})

with X conditioned by the random variable Theta obtained with the random variable Y through a function f

.. math::
   \underline{\Theta}=f(\underline{Y})



.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








create the Y distribution


.. code-block:: default

    YDist = ot.Uniform(-1.0, 1.0)








create Theta=f(y)


.. code-block:: default

    f = ot.SymbolicFunction(['y'], ['y', '1 + y'])








create the X|Theta distribution


.. code-block:: default

    XgivenThetaDist = ot.Uniform()








create the distribution


.. code-block:: default

    XDist = ot.BayesDistribution(XgivenThetaDist, YDist, f)
    XDist.setDescription(['X|Theta=f(y)', 'y'])
    XDist






.. raw:: html

    <p>BayesDistribution(X, Y with X|Theta~Uniform(Theta), Theta=f(Y), f=[y]->[y,1 + y], Y~Uniform(a = -1, b = 1))</p>
    <br />
    <br />

Get a sample


.. code-block:: default

    sample = XDist.getSample(100)








draw PDF


.. code-block:: default

    graph = XDist.drawPDF()
    cloud = ot.Cloud(sample)
    cloud.setColor('red')
    cloud.setLegend('sample')
    graph.add(cloud)
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_probabilistic_modeling/distributions/images/sphx_glr_plot_bayes_distribution_001.png
    :alt: [X|Theta=f(y),y] iso-PDF
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /home/devel/project/build/python/src/site-packages/openturns/viewer.py:432: UserWarning: No contour levels were found within the data range.
      contourset = self._ax[0].contour(X, Y, Z, **contour_kw)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.209 seconds)


.. _sphx_glr_download_auto_probabilistic_modeling_distributions_plot_bayes_distribution.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_bayes_distribution.py <plot_bayes_distribution.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_bayes_distribution.ipynb <plot_bayes_distribution.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
